updated activitypub version / fix jvm version issue